adds more xirr tests